from enum import Enum


class Direction(Enum) :
    LEFT = 1
    DOWN = 2
    RIGHT = 3