from enum import Enum


class Rotation(Enum):
    CLOCKWISE = 1
    COUNTER_CLOCKWISE = 2
